Added shedule and h2 db

--- a/frontend/coudy_app/index.html
+++ b/frontend/coudy_app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StudySync - Your Academic Command Center</title>
+    <title>Coudy - Your Academic Wepon</title>
     <meta name="description" content="Transform academic chaos into structured success with StudySync - AI-powered scheduling, study buddy matching, and gamified productivity." />
     <meta name="author" content="StudySync" />
 
